# e-voice

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  dev.sh  package-lock.json  package.json  watch.sh
config/: default.toml
docs/: OMARCHY.md
packaging/: PKGBUILD  e-voice.service
src/: client.rs  config.rs  daemon.rs  diagnostics.rs  http_server.rs  llm_backend.rs  main.rs  modes.rs  processor.rs  setup.rs  system_adapter.rs  transport.rs  tray.rs
src-frontend/: index.html  package-lock.json  package.json  vite.config.ts
src-frontend/src/: main.js  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
